<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_tab"
        android:title="@string/new_tab"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_new_incognito"
        android:title="@string/new_incognito_tab"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bookmarks"
        android:title="@string/bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_downloads"
        android:title="@string/downloads"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_find_in_page"
        android:title="@string/find_in_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_desktop_site"
        android:checkable="true"
        android:title="@string/desktop_site"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save_pdf"
        android:title="@string/save_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_data"
        android:title="Clear Browsing Data"
        app:showAsAction="never" />

</menu>
